--- a/index.html
+++ b/index.html
@@ -969,9 +969,11 @@
             <p style={{ fontSize: 11, color: "rgba(255,255,255,0.15)", marginTop: 4 }}>{stats.total} meetings · {stats.started} live</p>
           </div>
           <div style={{ display: "flex", flexDirection: "column", gap: 12, width: "100%", maxWidth: 320, marginTop: 48 }}>
+            {/* FOUNDER RUNNER BUTTON - COMMENTED OUT AS REQUESTED
             <button onClick={() => setView("runner-login")} className="btn-splash-primary">
               <span style={{ fontSize: 20 }}>📱</span> Founder Runner
             </button>
+            */}
 
             <button onClick={() => setView("concierge")} className="btn-splash-secondary">
               <span style={{ fontSize: 20 }}>🖥️</span> Dashboard
