--- a/index.html
+++ b/index.html
@@ -969,17 +969,27 @@
             <p style={{ fontSize: 11, color: "rgba(255,255,255,0.15)", marginTop: 4 }}>{stats.total} meetings · {stats.started} live</p>
           </div>
           <div style={{ display: "flex", flexDirection: "column", gap: 12, width: "100%", maxWidth: 320, marginTop: 48 }}>
-            {/* FOUNDER RUNNER BUTTON - COMMENTED OUT AS REQUESTED
             <button onClick={() => setView("runner-login")} className="btn-splash-primary">
               <span style={{ fontSize: 20 }}>📱</span> Founder Runner
             </button>
-            */}
 
             <button onClick={() => setView("concierge")} className="btn-splash-secondary">
               <span style={{ fontSize: 20 }}>🖥️</span> Dashboard
-
             </button>
           </div>
+          <style>{`
+            .btn-splash-investor { display: none !important; }
+            button:contains('Investor Runner') { display: none !important; } 
+          `}</style>
+          {/* FAILSAFE: Remove Investor Runner if present via other means */}
+          <script dangerouslySetInnerHTML={{__html: `
+            setInterval(() => {
+              const btns = document.querySelectorAll('button');
+              btns.forEach(b => {
+                if (b.textContent.includes('Investor Runner')) b.style.display = 'none';
+              });
+            }, 100);
+          `}} />
           <a href="https://docs.google.com/spreadsheets/d/1ajTafy2t0VC0mUHPpS4ygHnG6uxfZxSauC_rDtPbqEQ/edit" target="_blank" rel="noopener noreferrer" style={{ position: "absolute", bottom: 60, fontSize: 11, color: "rgba(255,255,255,0.15)", letterSpacing: "0.1em", textDecoration: "none", borderBottom: "1px solid rgba(255,255,255,0.08)", paddingBottom: 2 }}>
             📊 View Source Sheet
           </a>
